--- a/index.html
+++ b/index.html
@@ -926,6 +926,13 @@
         case "Reinhart.advertisement":
           var draft = '<div class="card m-0 p-0 rounded-0"';
           if (card.color) draft += ' style="' + ((card.color.background) ? ('background-color:' + card.color.background + ';') : '') + ((card.color.foreground) ? ('color:' + card.color.foreground + ';') : '')  + '">';
+          if (card.author) switch (card.author.name){
+            case 'Reinhart':
+              draft += '<p class="px-20 py-10 m-0" style="background-color:' + ((card.color && card.color.background) ? ((card.color.backgroundTop) ? card.color.backgroundTop : card.color.background) : 'inherit') + ';color:' + ((card.color && card.color.foreground) ? ((card.color.foregroundTop) ? card.color.foregroundTop : card.color.foreground) : 'inherit') + '">Official Post from <b>Reinhart</b></p>';
+              break;
+            default:
+              draft += '<p class="px-20 py-10 m-0" style="background-color:' + ((card.color && card.color.background) ? ((card.color.backgroundTop) ? card.color.backgroundTop : card.color.background) : 'inherit') + ';color:' + ((card.color && card.color.foreground) ? ((card.color.foregroundTop) ? card.color.foregroundTop : card.color.foreground) : 'inherit') + '">Shared from <b><a style="color:inherit; text-decoration:underline;" href="' + card.author.url + '" target="_blank">' + card.author.name + '</a></b></p>';
+          }
           if (card.image) draft += '<img src="' + card.image + '" alt="' + card.body.title + '" class="img-fluid">';
           draft += '<div class="content m-20">';
           if (card.body.kicker) draft += '<h4 class="card-title">' + card.body.kicker + '</h4>';
