feat: Add Christmas Greeting

--- a/index.html
+++ b/index.html
@@ -714,6 +714,16 @@
         1. https://www.gethalfmoon.com/docs/content-and-cards/#building-a-page
         2. https://www.gethalfmoon.com/docs/grid-system/#building-a-dashboard
       -->
+      <div class="content p-20" style="background: repeating-linear-gradient(
+        135deg,
+        #0094ff,
+        #0094ff 20px,
+        #0a87f0 20px,
+        #0a87f0 40px
+      ); color: #ffffff">
+        <h1 class="m-0">메리 크리스마스 2020<br>그리고 새해 복 많이 받아 2021!</h1>
+        <!-- <h5>Let there be a #developer #Crewmate #AmongUs,<br>#BuildingTheNation and bringing <code>SELECT * FROM</code> your #DisneyPlus dreams <code>return true;</code><br>As high as #Mulan's (#IndiHome Paket) Phoenix,<br>and as close as the 0s and 1s of #Sayu and #1010.<br><br>Let our mission of #FosteringAndEmpowering may not simply fail at the #SANDBOX,<br>or into the grims of #MasterChefIndonesia's Pressure Tests.<br>Even both #Cyberpunk2077 and #HenryStickminCollection have seen their bright future,<br>because they are actually set in the future.<br><br>Finally, before you go,<br>#MayTheForceBeWithYou against all #Impostors.<br>#StartUp and #FollowYourDream even when there are #NoStraightRoads,<br>as #BrightAsTheSun, said #AsianGames2018.</h5> -->
+      </div>
       <div class="content">
         <h2 id="explore">Explore</h2><hr>
         <div class="container-fluid">
